# tum_deploy

./: .gitignore  motor_retro.cpp  requirements.txt
sam_codes/: data_torques.py  gait_robot.py  imu_test.py  leg_visualizer.py  receptor_sebas.py  robot_receiver.py  set_baudrate.py  tum_robot.py
sam_codes/libs/: bezier_sam.py  gait_generator copy.py  gait_generator.py  imu_controller.py  kinematics_sam.py  robot_class.py
sam_codes/motors_utils/: debug.py  debug_motors.py  limits.py  moteus_driver.py  move_motor.py  read_and_move.py  single_leg_move.py  test_bus.py  zeros.py
sam_cpp/: CMakeLists.txt  conexion_udp.cpp  memory_cleaner.cpp  move_legs.cpp  pruebas.cpp  pruebas_torque.cpp  robot_controller.cpp  single_leg.cpp  torque_single_leg.cpp  walk_sam.cpp  walk_sam_v2.cpp  walk_v1.cpp  walk_v2.cpp  walk_v3.cpp  walk_v4.cpp  walk_v5.cpp
sam_cpp/libs/: bezier_sam.cpp  bezier_sam.h  bindings.cpp  gait_generator.cpp  gait_generator.h  kinematics_sam.cpp  kinematics_sam.h  quadruped_robot.cpp  quadruped_robot.h  utils_sam.h
sam_cpp/new_motors_cpp/: contact_publisher  contact_publisher.cpp  imu.cpp  imu_publisher  imu_tester  move_pose.cpp  pos_statica  run_robot.sh  telemetry_viewer.cpp
sam_cpp/new_motors_cpp/new_motors/: CMakeLists.txt  dynamics.hpp  main.cpp  monitor  robot_config.hpp  shared_memory.hpp  tel_viewer  telemetry_viewer.cpp  test_memory.py  utils.hpp
tum_refactory/locomotion/: CMakeLists.txt
tum_refactory/locomotion/libs/: gait_setup.hpp  kinematics.hpp  memory_setup.hpp  robot_config.hpp  robot_types.hpp  setup.hpp  utils.hpp  zmp_control.hpp
tum_refactory/locomotion/src/: gait_setup.cpp  kinematics.cpp  main.cpp  memory_setup.cpp  setup.cpp  static_balance.cpp  test.cpp  zmp_control.cpp
tum_refactory/motors/: CMakeLists.txt
tum_refactory/motors/libs/: telemetry.hpp
tum_refactory/motors/src/: main.cpp  telemetry_viewer.cpp
tum_refactory/telemetry/: CMakeLists.txt
tum_refactory/telemetry/libs/: robot_config.hpp
tum_refactory/telemetry/src/: contact_publisher.cpp  imu.cpp  imu_tester.cpp  telemetry_viewer.cpp
tum_refactory2/motors/: CMakeLists.txt
tum_refactory2/motors/libs/: shared_memory.hpp  utils_motors.hpp
tum_refactory2/motors/src/: main.cpp
tum_refactory2/tum_core/src/: kinematics.cpp
tum_refactory3/motors/: CMakeLists.txt
tum_refactory3/motors/libs/: dart_test.hpp
tum_refactory3/motors/src/: bezier_node  main.cpp  main.cpp}  test_gait.cpp  test_new_motors.cpp
tum_refactory3/motors/test/: new_motors.cpp
